# credit-planner-agent

./: .gitignore  AGENTS.md  CLAUDE.md  DECISION_LOG.md  README.md  pyproject.toml
db/: README.md  init_db.py
logs/: README.md
ml/: README.md  spending_analyzer.py  statement_parser.py
ml/category_classifier/: classifier.py  training_data.json
ml/spending_predictor/: predictor.py
pipeline/: README.md  db_writer.py  exclusions.py  preferences.py  report_writer.py  resolution.py  spending_analyzer.py  statement_parser.py
pipeline/category_classifier/: classifier.py  patterns.py
pipeline/parsers/: capital_one.py  chase_checking.py  chase_credit.py  csv_parser.py  helpers.py
pipeline/spending_predictor/: predictor.py
report/: README.md
skills/: README.md
skills/card-recommendation/: SKILL.md
skills/cli-strategy/: SKILL.md
skills/profile-intake/: SKILL.md
skills/retention-strategy/: SKILL.md
skills/statement-analysis/: SKILL.md
skills/timeline-builder/: SKILL.md
tests/: test_integration.py  test_spending_analyzer_resolution.py
