[project]
name = "credit-planner-agent"
version = "0.1.0"
description = "Interactive credit strategy agent — analyze spending, recommend cards, and establish strategic roadmaps"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # PDF parsing
    "pdfplumber>=0.10.0",

    # Numerical (used by spending_predictor)
    "numpy>=1.24.0",

    # Data processing
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
